[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Title.gd" type="Script" id=1]
[ext_resource path="res://GFX/titleBG.jpg" type="Texture" id=2]
[ext_resource path="res://GFX/new_game.png" type="Texture" id=3]
[ext_resource path="res://GFX/about_game.png" type="Texture" id=4]
[ext_resource path="res://GFX/exit_game.png" type="Texture" id=5]
[ext_resource path="res://SFX/rollover6.ogg" type="AudioStream" id=6]
[ext_resource path="res://SFX/click3.ogg" type="AudioStream" id=7]
[ext_resource path="res://SFX/338065__geronimogeronimo__space-alarm.ogg" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]

[node name="Title" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 0.355547, 0.370387 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="NewGameArea" type="Area2D" parent="."]
editor/display_folded = true
__meta__ = {
"_edit_group_": true
}

[node name="NewGameCol" type="CollisionShape2D" parent="NewGameArea"]
position = Vector2( 512, 220 )
scale = Vector2( 15, -2.5 )
shape = SubResource( 1 )

[node name="NewGameSprite" type="Sprite" parent="NewGameArea"]
position = Vector2( 512, 220 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="AboutGameArea" type="Area2D" parent="."]
editor/display_folded = true
__meta__ = {
"_edit_group_": true
}

[node name="AboutGameCol" type="CollisionShape2D" parent="AboutGameArea"]
position = Vector2( 512, 280 )
scale = Vector2( 18, -2.5 )
shape = SubResource( 1 )

[node name="AboutGameSprite" type="Sprite" parent="AboutGameArea"]
position = Vector2( 512, 280 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="ExitGameArea" type="Area2D" parent="."]
editor/display_folded = true
__meta__ = {
"_edit_group_": true
}

[node name="ExitGameCol" type="CollisionShape2D" parent="ExitGameArea"]
position = Vector2( 512, 350 )
scale = Vector2( 15, -2.5 )
shape = SubResource( 1 )

[node name="ExitGameSprite" type="Sprite" parent="ExitGameArea"]
position = Vector2( 512, 350 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="SFXRollOver" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="SFXSelect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
autoplay = true
[connection signal="input_event" from="NewGameArea" to="." method="_on_NewGameArea_input_event"]
[connection signal="mouse_entered" from="NewGameArea" to="." method="_on_NewGameArea_mouse_entered"]
[connection signal="mouse_exited" from="NewGameArea" to="." method="_on_NewGameArea_mouse_exited"]
[connection signal="input_event" from="AboutGameArea" to="." method="_on_AboutGameArea_input_event"]
[connection signal="mouse_entered" from="AboutGameArea" to="." method="_on_AboutGameArea_mouse_entered"]
[connection signal="mouse_exited" from="AboutGameArea" to="." method="_on_AboutGameArea_mouse_exited"]
[connection signal="input_event" from="ExitGameArea" to="." method="_on_ExitGameArea_input_event"]
[connection signal="mouse_entered" from="ExitGameArea" to="." method="_on_ExitGameArea_mouse_entered"]
[connection signal="mouse_exited" from="ExitGameArea" to="." method="_on_ExitGameArea_mouse_exited"]
